fix bug overflow

--- a/world/main.css
+++ b/world/main.css
@@ -1,6 +1,7 @@
-/*body {
-    overflow: hidden;
-} */
+body {
+    margin: o;
+}
+
 #map {
     width: 100vw;
     height: 100vw;
